@@ -1,3 +1,13 @@
+2007-05-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_shadow), (clearlooks_draw_highlight_and_shade):
+	Improved shadow on frames
+
+	* engines/clearlooks/src/clearlooks_draw_glossy.c:
+	(clearlooks_glossy_draw_list_view_header):
+	Changed separator color
+
 2007-05-08  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_style.c:
